--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
             tools:visibility="gone" />
 
         <ProgressBar
+            android:id="@+id/loading_progress_bar"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:indeterminate="true"
